--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "~6.0.1",
+    "@angular/cli": "^6.1.2",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
     "@angular/platform-server": "^6.0.1",
