chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "morgan": "^1.9.0",
     "newrelic": "^4.1.0",
     "ngx-bootstrap": "^3.0.0-RC.1",
-    "ngx-cookie": "^3.0.1",
+    "ngx-cookie": "^4.0.2",
     "reflect-metadata": "^0.1.12",
     "request": "^2.85.0",
     "rxjs": "^6.0.0",
@@ -121,7 +121,7 @@
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
     "@types/express-serve-static-core": "^4.11.1",
-    "@types/helmet": "^0.0.37",
+    "@types/helmet": "0.0.38",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/jsonwebtoken": "^7.2.7",
@@ -129,27 +129,27 @@
     "@types/mongodb": "^3.0.18",
     "@types/mongoose": "~5.0.13",
     "@types/morgan": "^1.7.35",
-    "@types/node": "~8.9.4",
+    "@types/node": "^10.5.7",
     "@types/request": "^2.47.0",
     "@types/serve-static": "^1.13.2",
     "@types/validator": "^9.4.1",
     "ajv": "^6.5.2",
     "bootstrap-sass": "^3.3.7",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^4.4.3",
     "font-awesome": "^4.7.0",
     "husky": "^0.14.3",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jasmine-ts": "^0.2.1",
     "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage": "^1.1.2",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
     "karma-remap-coverage": "^0.1.5",
     "markdownlint-cli": "^0.12.0",
-    "nyc": "^11.7.3",
+    "nyc": "^12.0.2",
     "protractor": "^5.4.0",
     "sass-lint": "^1.12.1",
     "semantic-release": "^15.9.5",
