ci: fix gihtub-label-sync, add travis_retry

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ branches:
 before_install:
   # package-lock.json was introduced in npm@5
   - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
-  - npm install -g greenkeeper-lockfile @angular/cli karma-cli protractor semantic-release typescript webpack webpack-dev-server
+  - npm install -g github-label-sync greenkeeper-lockfile @angular/cli karma-cli protractor semantic-release typescript webpack webpack-dev-server
 install:
   - travis_retry ./run --install
 stages:
@@ -35,7 +35,7 @@ jobs:
     - name: 'Repository Checks'
       script:
         - commitlint-travis
-        - npm install -g github-label-sync && github-label-sync -a "$GH_TOKEN" -l 'https://git.io/fAe5i' seantrane/mean-stacker
+        - travis_retry github-label-sync -a "$GH_TOKEN" -l 'https://git.io/fAe5i' seantrane/mean-stacker
     - stage: test
       name: 'Lint Analysis'
       script: ./run --lint
