--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: required
 language: node_js
 services:
   - docker
+addons:
+  sonarcloud:
+    organization: "seantrane-github"
 node_js:
   - '8'
 cache:
@@ -39,6 +42,7 @@ jobs:
         # disabled until fixed:
         # - ./run --test --report
         # - ./run --e2e
+        - sonar-scanner
         - greenkeeper-lockfile-upload
     - stage: deploy
       name: 'Publish, Upload and Deploy'
