--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,10 @@ jobs:
         - travis_retry github-label-sync -a "$GH_TOKEN" -l 'https://git.io/fAe5i' seantrane/mean-stacker
         - ./run --lint
         # disabled until fixed:
-        # - ./run --test --report
-        # - ./run --e2e
+        - ./run --debug --test --report
+        - ./run --debug --e2e
         - sonar-scanner
         - greenkeeper-lockfile-upload
     - stage: deploy
       name: 'Publish, Upload and Deploy'
-      script: ./run --publish
+      script: ./run --debug --publish
