ci(package): add commit header-max-length=100

--- a/package.json
+++ b/package.json
@@ -163,7 +163,14 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "header-max-length": [
+        0,
+        "always",
+        100
+      ]
+    }
   },
   "release": {
     "verifyConditions": [
