--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,13 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=seantrane_mean-stacker
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=mean-stacker
+sonar.projectName=MEAN Stacker
 sonar.projectVersion=latest
+
+sonar.links.homepage=https://github.com/seantrane/mean-stacker#readme
+sonar.links.ci=https://travis-ci.com/seantrane/mean-stacker
+sonar.links.scm=https://github.com/seantrane/mean-stacker
+sonar.links.issue=https://github.com/seantrane/mean-stacker/issues
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
