--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@nguniversal/module-map-ngfactory-loader": "^7.0.0",
     "@ngx-meta/core": "^6.0.0-rc.1",
     "@ngx-translate/core": "^10.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@ngx-translate/http-loader": "^3.0.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
@@ -98,7 +98,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "^6.1.2",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
@@ -132,6 +132,7 @@
     "codelyzer": "~4.4.3",
     "font-awesome": "^4.7.0",
     "husky": "^1.0.0",
+    "jasmine": "^3.3.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jasmine-ts": "^0.3.0",
@@ -151,7 +152,7 @@
     "ts-loader": "^4.4.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.0.1",
+    "typescript": "~2.9.1",
     "uglifyjs-webpack-plugin": "^2.0.0",
     "webpack-cli": "^3.0.8"
   },
