--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A MEAN Stack Starter Kit",
   "version": "1.0.3",
   "author": "Sean Trane Sciarrone",
-  "license": "MIT",
+  "license": "ISC",
   "homepage": "https://github.com/seantrane/mean-stacker#readme",
   "repository": "github:seantrane/mean-stacker",
   "bugs": "https://github.com/seantrane/mean-stacker/issues",
